--- a/word2vec.ipynb
+++ b/word2vec.ipynb
@@ -100,9 +100,9 @@
    "source": [
     "class CBOW(nn.Module):\n",
     "    def __init__(self, embedding_size, vocab_size):\n",
-    "        super(Word2Vec, self).__init__()\n",
-    "        self.embeddings = nn.Embedding(vocab_size, embedding_dim)\n",
-    "        self.linear = nn.Linear(embedding_dim, vocab_size)\n",
+    "        super(CBOW, self).__init__()\n",
+    "        self.embeddings = nn.Embedding(vocab_size, embedding_size)\n",
+    "        self.linear = nn.Linear(embedding_size, vocab_size)\n",
     "    def forward(self, context_words):\n",
     "        embedded=self.embeddings(context_words)\n",
     "        projection=torch.mean(embedded)\n",
