--- a/word2vec.ipynb
+++ b/word2vec.ipynb
@@ -41,14 +41,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "sentencepiece_trainer.cc(78) LOG(INFO) Starts training with : \n",
+      "trainer_spec {\n",
+      "  input: wiki_output.txt\n",
+      "  input_format: \n",
+      "  model_prefix: wikimodel\n",
+      "  model_type: UNIGRAM\n",
+      "  vocab_size: 7000\n",
+      "  self_test_sample_size: 0\n",
+      "  character_coverage: 0.9995\n",
+      "  input_sentence_size: 0\n",
+      "  shuffle_input_sentence: 1\n",
+      "  seed_sentencepiece_size: 1000000\n",
+      "  shrinking_factor: 0.75\n",
+      "  max_sentence_length: 4192\n",
+      "  num_threads: 16\n",
+      "  num_sub_iterations: 2\n",
+      "  max_sentencepiece_length: 16\n",
+      "  split_by_unicode_script: 1\n",
+      "  split_by_number: 1\n",
+      "  split_by_whitespace: 1\n",
+      "  split_digits: 0\n",
+      "  pretokenization_delimiter: \n",
+      "  treat_whitespace_as_suffix: 0\n",
+      "  allow_whitespace_only_pieces: 0\n",
+      "  required_chars: \n",
+      "  byte_fallback: 0\n",
+      "  vocabulary_output_piece_score: 1\n",
+      "  train_extremely_large_corpus: 0\n",
+      "  hard_vocab_limit: 1\n",
+      "  use_all_vocab: 0\n",
+      "  unk_id: 0\n",
+      "  bos_id: 1\n",
+      "  eos_id: 2\n",
+      "  pad_id: -1\n",
+      "  unk_piece: <unk>\n",
+      "  bos_piece: <s>\n",
+      "  eos_piece: </s>\n",
+      "  pad_piece: <pad>\n",
+      "  unk_surface:  ⁇ \n",
+      "  enable_differential_privacy: 0\n",
+      "  differential_privacy_noise_level: 0\n",
+      "  differential_privacy_clipping_threshold: 0\n",
+      "}\n",
+      "normalizer_spec {\n",
+      "  name: nmt_nfkc\n",
+      "  add_dummy_prefix: 1\n",
+      "  remove_extra_whitespaces: 1\n",
+      "  escape_whitespaces: 1\n",
+      "  normalization_rule_tsv: \n",
+      "}\n",
+      "denormalizer_spec {}\n",
+      "trainer_interface.cc(352) LOG(INFO) SentenceIterator is not specified. Using MultiFileSentenceIterator.\n",
+      "trainer_interface.cc(184) LOG(INFO) Loading corpus: wiki_output.txt\n",
+      "trainer_interface.cc(408) LOG(INFO) Loaded all 1469 sentences\n",
+      "trainer_interface.cc(424) LOG(INFO) Adding meta_piece: <unk>\n",
+      "trainer_interface.cc(424) LOG(INFO) Adding meta_piece: <s>\n",
+      "trainer_interface.cc(424) LOG(INFO) Adding meta_piece: </s>\n",
+      "trainer_interface.cc(429) LOG(INFO) Normalizing sentences...\n",
+      "trainer_interface.cc(538) LOG(INFO) all chars count=221964\n",
+      "trainer_interface.cc(549) LOG(INFO) Done: 99.9513% characters are covered.\n",
+      "trainer_interface.cc(559) LOG(INFO) Alphabet size=120\n",
+      "trainer_interface.cc(560) LOG(INFO) Final character coverage=0.999513\n",
+      "trainer_interface.cc(592) LOG(INFO) Done! preprocessed 1373 sentences.\n",
+      "unigram_model_trainer.cc(223) LOG(INFO) Making suffix array...\n",
+      "unigram_model_trainer.cc(227) LOG(INFO) Extracting frequent sub strings... node_num=111033\n",
+      "unigram_model_trainer.cc(275) LOG(INFO) Initialized 20850 seed sentencepieces\n",
+      "trainer_interface.cc(598) LOG(INFO) Tokenizing input sentences with whitespace: 1373\n",
+      "trainer_interface.cc(609) LOG(INFO) Done! 11117\n",
+      "unigram_model_trainer.cc(565) LOG(INFO) Using 11117 sentences for EM training\n",
+      "unigram_model_trainer.cc(581) LOG(INFO) EM sub_iter=0 size=8302 obj=12.8673 num_tokens=24099 num_tokens/piece=2.90279\n",
+      "unigram_model_trainer.cc(581) LOG(INFO) EM sub_iter=1 size=7381 obj=11.0583 num_tokens=24268 num_tokens/piece=3.2879\n",
+      "trainer_interface.cc(687) LOG(INFO) Saving model: wikimodel.model\n",
+      "trainer_interface.cc(699) LOG(INFO) Saving vocabs: wikimodel.vocab\n"
+     ]
+    }
+   ],
    "source": [
     "file_name = 'wiki_output.txt'\n",
+    "vocab_size = 7000\n",
     "#1 Tokenize the whole text\n",
     "import sentencepiece as spm\n",
-    "spm.SentencePieceTrainer.train(input=file_name, model_prefix='wikimodel', vocab_size=8000)\n",
+    "spm.SentencePieceTrainer.train(input=file_name, model_prefix='wikimodel', vocab_size=vocab_size)\n",
     "\n",
     "sp=spm.SentencePieceProcessor()\n",
     "sp.load(\"wikimodel.model\")\n",
@@ -77,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,11 +184,14 @@
     "        super(CBOW, self).__init__()\n",
     "        self.embeddings = nn.Embedding(vocab_size, embedding_size)\n",
     "        self.linear = nn.Linear(embedding_size, vocab_size)\n",
+    "        \n",
     "    def forward(self, context_words):\n",
     "        embedded=self.embeddings(context_words)\n",
     "        projection=torch.mean(embedded)\n",
     "        out_layer=self.linear(projection)\n",
     "        log_probs=nn.functional.log_softmax(out_layer, dim=1)\n",
+    "        return log_probs\n",
+    "            \n",
     "    def embed(self, word):\n",
     "        self.eval()\n",
     "        embedding=self.embeddings(word)\n",
@@ -116,31 +200,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#DEFINE A LOSS FUNCTION"
+    "#DEFINE A LOSS FUNCTION\n",
+    "embedding_size = 128\n",
+    "\n",
+    "cbow_model = CBOW(embedding_size, vocab_size)  # Assuming CBOWModel is defined as before\n",
+    "cbow_loss_function = nn.NLLLoss()\n",
+    "cbow_optimizer = torch.optim.SGD(cbow_model.parameters(), lr=0.01)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "incomplete input (158832844.py, line 2)",
+     "ename": "RuntimeError",
+     "evalue": "ArrayRef: invalid index Index = 18446744073709551615; Length = 0",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[14], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    for epoch in range(epochs):\u001b[0m\n\u001b[1;37m                               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m incomplete input\n"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[25], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m context, target \u001b[38;5;129;01min\u001b[39;00m pairs:\n\u001b[1;32m      5\u001b[0m     cbow_model\u001b[38;5;241m.\u001b[39mzero_grad()\n\u001b[0;32m----> 6\u001b[0m     log_probs \u001b[38;5;241m=\u001b[39m \u001b[43mcbow_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcontext\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m     loss \u001b[38;5;241m=\u001b[39m cbow_loss_function(log_probs, target)\n\u001b[1;32m      8\u001b[0m     loss\u001b[38;5;241m.\u001b[39mbackward()\n",
+      "File \u001b[0;32m/opt/anaconda3/envs/sklearn-env/lib/python3.12/site-packages/torch/nn/modules/module.py:1511\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1509\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_compiled_call_impl(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[1;32m   1510\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m-> 1511\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_call_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/opt/anaconda3/envs/sklearn-env/lib/python3.12/site-packages/torch/nn/modules/module.py:1520\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1515\u001b[0m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1516\u001b[0m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1517\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1518\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1519\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1520\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1522\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m   1523\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[24], line 10\u001b[0m, in \u001b[0;36mCBOW.forward\u001b[0;34m(self, context_words)\u001b[0m\n\u001b[1;32m      8\u001b[0m embedded\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39membeddings(context_words)\n\u001b[1;32m      9\u001b[0m projection\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mmean(embedded)\n\u001b[0;32m---> 10\u001b[0m out_layer\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlinear\u001b[49m\u001b[43m(\u001b[49m\u001b[43mprojection\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     11\u001b[0m log_probs\u001b[38;5;241m=\u001b[39mnn\u001b[38;5;241m.\u001b[39mfunctional\u001b[38;5;241m.\u001b[39mlog_softmax(out_layer, dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m log_probs\n",
+      "File \u001b[0;32m/opt/anaconda3/envs/sklearn-env/lib/python3.12/site-packages/torch/nn/modules/module.py:1511\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1509\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_compiled_call_impl(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[1;32m   1510\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m-> 1511\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_call_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/opt/anaconda3/envs/sklearn-env/lib/python3.12/site-packages/torch/nn/modules/module.py:1520\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1515\u001b[0m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1516\u001b[0m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1517\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1518\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1519\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1520\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1522\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m   1523\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "File \u001b[0;32m/opt/anaconda3/envs/sklearn-env/lib/python3.12/site-packages/torch/nn/modules/linear.py:116\u001b[0m, in \u001b[0;36mLinear.forward\u001b[0;34m(self, input)\u001b[0m\n\u001b[1;32m    115\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mforward\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;28minput\u001b[39m: Tensor) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Tensor:\n\u001b[0;32m--> 116\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mF\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlinear\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mweight\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbias\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: ArrayRef: invalid index Index = 18446744073709551615; Length = 0"
      ]
     }
    ],
    "source": [
     "\n",
     "epochs=50\n",
-    "for epoch in range(epochs):\n"
+    "for epoch in range(epochs):\n",
+    "    total_loss = 0\n",
+    "    for context, target in pairs:\n",
+    "        cbow_model.zero_grad()\n",
+    "        log_probs = cbow_model(context)\n",
+    "        loss = cbow_loss_function(log_probs, target)\n",
+    "        loss.backward()\n",
+    "        cbow_optimizer.step()\n",
+    "        total_loss += loss.item()"
    ]
   },
   {
