cbow model updated

--- a/word2vec.ipynb
+++ b/word2vec.ipynb
@@ -244,9 +244,7 @@
     "        total_loss += loss.item()\n",
     "        \n",
     "    print(f\"Epoch {epoch+1} finished with total loss: {total_loss:.4f}\")\n",
-    "    torch.save(cbow_model.state_dict(), os.path.join(\"cbow_weights\", f\"cbow_epoch_{epoch+1}.pth\"))\n",
-    "        \n",
-    "print(\"Loss: \", total_loss)"
+    "    torch.save(cbow_model.state_dict(), os.path.join(\"cbow_weights\", f\"cbow_epoch_{epoch+1}.pth\"))     "
    ]
   },
   {
@@ -254,7 +252,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cbow_model = CBOW(embedding_size, vocab_size)  # Assuming CBOWModel is defined as before\n",
+    "cbow_model.load_state_dict(torch.load(os.path.join(\"cbow_weights\", f\"cbow_epoch_{epochs}.pth\")))\n",
+    "cbow_model.eval()\n"
+   ]
   }
  ],
  "metadata": {
