--- a/word2vec.ipynb
+++ b/word2vec.ipynb
@@ -8,6 +8,8 @@
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "import tqdm\n",
     "import os"
    ]
   },
@@ -17,117 +19,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import wikipedia\n",
+    "import wikipedia\n",
     "\n",
-    "# articles = []\n",
-    "# num_texts = 100\n",
-    "# print(wikipedia.random(pages=10))\n",
-    "# for title in wikipedia.random(pages=num_texts):\n",
-    "#     try:\n",
-    "#         page = wikipedia.page(title)\n",
-    "#         articles.append(page.content)\n",
-    "#     except wikipedia.exceptions.DisambiguationError as e:\n",
-    "#         print(e.options)\n",
-    "#     except wikipedia.exceptions.PageError as e:\n",
-    "#         print(e)\n",
+    "articles = []\n",
+    "num_texts = 1000\n",
+    "print(wikipedia.random(pages=10))\n",
+    "for title in wikipedia.random(pages=num_texts):\n",
+    "    try:\n",
+    "        page = wikipedia.page(title)\n",
+    "        articles.append(page.content)\n",
+    "    except wikipedia.exceptions.DisambiguationError as e:\n",
+    "        print(e.options)\n",
+    "    except wikipedia.exceptions.PageError as e:\n",
+    "        print(e)\n",
     "        \n",
-    "# print(\"articles: \", articles)\n",
+    "print(\"articles: \", articles)\n",
     "\n",
     "\n",
-    "# file_name = 'wiki_output.txt'\n",
-    "# with open(file_name, 'wt') as f:\n",
-    "#     for article in articles:\n",
-    "#         f.write(article + '\\n')"
+    "file_name = 'wiki_output.txt'\n",
+    "with open(file_name, 'wt') as f:\n",
+    "    for article in articles:\n",
+    "        f.write(article + '\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "sentencepiece_trainer.cc(78) LOG(INFO) Starts training with : \n",
-      "trainer_spec {\n",
-      "  input: wiki_output.txt\n",
-      "  input_format: \n",
-      "  model_prefix: wikimodel\n",
-      "  model_type: UNIGRAM\n",
-      "  vocab_size: 7000\n",
-      "  self_test_sample_size: 0\n",
-      "  character_coverage: 0.9995\n",
-      "  input_sentence_size: 0\n",
-      "  shuffle_input_sentence: 1\n",
-      "  seed_sentencepiece_size: 1000000\n",
-      "  shrinking_factor: 0.75\n",
-      "  max_sentence_length: 4192\n",
-      "  num_threads: 16\n",
-      "  num_sub_iterations: 2\n",
-      "  max_sentencepiece_length: 16\n",
-      "  split_by_unicode_script: 1\n",
-      "  split_by_number: 1\n",
-      "  split_by_whitespace: 1\n",
-      "  split_digits: 0\n",
-      "  pretokenization_delimiter: \n",
-      "  treat_whitespace_as_suffix: 0\n",
-      "  allow_whitespace_only_pieces: 0\n",
-      "  required_chars: \n",
-      "  byte_fallback: 0\n",
-      "  vocabulary_output_piece_score: 1\n",
-      "  train_extremely_large_corpus: 0\n",
-      "  hard_vocab_limit: 1\n",
-      "  use_all_vocab: 0\n",
-      "  unk_id: 0\n",
-      "  bos_id: 1\n",
-      "  eos_id: 2\n",
-      "  pad_id: -1\n",
-      "  unk_piece: <unk>\n",
-      "  bos_piece: <s>\n",
-      "  eos_piece: </s>\n",
-      "  pad_piece: <pad>\n",
-      "  unk_surface:  ⁇ \n",
-      "  enable_differential_privacy: 0\n",
-      "  differential_privacy_noise_level: 0\n",
-      "  differential_privacy_clipping_threshold: 0\n",
-      "}\n",
-      "normalizer_spec {\n",
-      "  name: nmt_nfkc\n",
-      "  add_dummy_prefix: 1\n",
-      "  remove_extra_whitespaces: 1\n",
-      "  escape_whitespaces: 1\n",
-      "  normalization_rule_tsv: \n",
-      "}\n",
-      "denormalizer_spec {}\n",
-      "trainer_interface.cc(352) LOG(INFO) SentenceIterator is not specified. Using MultiFileSentenceIterator.\n",
-      "trainer_interface.cc(184) LOG(INFO) Loading corpus: wiki_output.txt\n",
-      "trainer_interface.cc(408) LOG(INFO) Loaded all 1469 sentences\n",
-      "trainer_interface.cc(424) LOG(INFO) Adding meta_piece: <unk>\n",
-      "trainer_interface.cc(424) LOG(INFO) Adding meta_piece: <s>\n",
-      "trainer_interface.cc(424) LOG(INFO) Adding meta_piece: </s>\n",
-      "trainer_interface.cc(429) LOG(INFO) Normalizing sentences...\n",
-      "trainer_interface.cc(538) LOG(INFO) all chars count=221964\n",
-      "trainer_interface.cc(549) LOG(INFO) Done: 99.9513% characters are covered.\n",
-      "trainer_interface.cc(559) LOG(INFO) Alphabet size=120\n",
-      "trainer_interface.cc(560) LOG(INFO) Final character coverage=0.999513\n",
-      "trainer_interface.cc(592) LOG(INFO) Done! preprocessed 1373 sentences.\n",
-      "unigram_model_trainer.cc(223) LOG(INFO) Making suffix array...\n",
-      "unigram_model_trainer.cc(227) LOG(INFO) Extracting frequent sub strings... node_num=111033\n",
-      "unigram_model_trainer.cc(275) LOG(INFO) Initialized 20850 seed sentencepieces\n",
-      "trainer_interface.cc(598) LOG(INFO) Tokenizing input sentences with whitespace: 1373\n",
-      "trainer_interface.cc(609) LOG(INFO) Done! 11117\n",
-      "unigram_model_trainer.cc(565) LOG(INFO) Using 11117 sentences for EM training\n",
-      "unigram_model_trainer.cc(581) LOG(INFO) EM sub_iter=0 size=8302 obj=12.8673 num_tokens=24099 num_tokens/piece=2.90279\n",
-      "unigram_model_trainer.cc(581) LOG(INFO) EM sub_iter=1 size=7381 obj=11.0583 num_tokens=24268 num_tokens/piece=3.2879\n",
-      "trainer_interface.cc(687) LOG(INFO) Saving model: wikimodel.model\n",
-      "trainer_interface.cc(699) LOG(INFO) Saving vocabs: wikimodel.vocab\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "file_name = 'wiki_output.txt'\n",
-    "vocab_size = 7000\n",
+    "vocab_size = 10000\n",
     "#1 Tokenize the whole text\n",
     "import sentencepiece as spm\n",
     "spm.SentencePieceTrainer.train(input=file_name, model_prefix='wikimodel', vocab_size=vocab_size)\n",
@@ -232,16 +154,18 @@
     }
    ],
    "source": [
+    "cbow_dataloader = DataLoader(pairs, batch_size=32, shuffle=True)\n",
     "epochs=5\n",
     "for epoch in range(epochs):\n",
     "    total_loss = 0\n",
-    "    for context, target in pairs:\n",
-    "        cbow_model.zero_grad()\n",
-    "        log_probs = cbow_model(context)\n",
-    "        loss = cbow_loss_function(log_probs, target)\n",
-    "        loss.backward()\n",
-    "        cbow_optimizer.step()\n",
-    "        total_loss += loss.item()\n",
+    "    with tqdm(cbow_dataloader, unit=\"batch\") as tepoch:\n",
+    "        for context, target in pairs:\n",
+    "            cbow_model.zero_grad()\n",
+    "            log_probs = cbow_model(context)\n",
+    "            loss = cbow_loss_function(log_probs, target)\n",
+    "            loss.backward()\n",
+    "            cbow_optimizer.step()\n",
+    "            total_loss += loss.item()\n",
     "        \n",
     "    print(f\"Epoch {epoch+1} finished with total loss: {total_loss:.4f}\")\n",
     "    torch.save(cbow_model.state_dict(), os.path.join(\"cbow_weights\", f\"cbow_epoch_{epoch+1}.pth\"))     "
@@ -249,13 +173,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['king', '▁forms', '▁Mei', 'wh', 'was', 'ential']\n"
+     ]
+    }
+   ],
    "source": [
     "cbow_model = CBOW(embedding_size, vocab_size)  # Assuming CBOWModel is defined as before\n",
     "cbow_model.load_state_dict(torch.load(os.path.join(\"cbow_weights\", f\"cbow_epoch_{epochs}.pth\")))\n",
-    "cbow_model.eval()\n"
+    "cbow_model.eval()\n",
+    "\n",
+    "#Get the word embeddings\n",
+    "word_embeddings = cbow_model.embeddings.weight.data\n",
+    "\n",
+    "#test closest words\n",
+    "def closest_words(embedding, embeddings, n=5):\n",
+    "    distances = torch.norm(embeddings-embedding, dim=1)\n",
+    "    _, indices = torch.topk(distances, n+1, largest=False)\n",
+    "    return indices\n",
+    "\n",
+    "word = \"king\"\n",
+    "word_id = sp.piece_to_id(word)\n",
+    "word_embedding = cbow_model.embeddings(torch.tensor(word_id))\n",
+    "closest = closest_words(word_embedding, word_embeddings)\n",
+    "closest_word = [sp.id_to_piece(idx.item()) for idx in closest]\n",
+    "\n",
+    "print(closest_word)"
    ]
   }
  ],
