new cbow weights

--- a/word2vec.ipynb
+++ b/word2vec.ipynb
@@ -9,7 +9,7 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "from torch.utils.data import Dataset, DataLoader\n",
-    "import tqdm\n",
+    "from tqdm import tqdm\n",
     "import os"
    ]
   },
@@ -23,7 +23,6 @@
     "\n",
     "articles = []\n",
     "num_texts = 1000\n",
-    "print(wikipedia.random(pages=10))\n",
     "for title in wikipedia.random(pages=num_texts):\n",
     "    try:\n",
     "        page = wikipedia.page(title)\n",
@@ -81,24 +80,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([4, 56598]) torch.Size([56598])\n"
+     ]
+    }
+   ],
    "source": [
     "#CBOW Word2Vec model\n",
     "#Firstly, we need to split the data into examples, e.g. (word, context word) in SKipGram and (context words, word) in CBOW\n",
     "window=2\n",
-    "pairs=[]\n",
+    "contexts=[]\n",
+    "targets=[]\n",
     "for index in range(window, len(tokens)-window):\n",
-    "    input_tokens=tokens[index-window:index]+tokens[index+1:index+window+1]\n",
-    "    output_token=tokens[index]\n",
-    "    pair=[torch.tensor(input_tokens, dtype=torch.long), torch.tensor(output_token, dtype=torch.long)]\n",
-    "    pairs.append(pair)\n"
+    "    context_tokens=tokens[index-window:index]+tokens[index+1:index+window+1]\n",
+    "    target_token=tokens[index]\n",
+    "    pair=[torch.tensor(context_tokens, dtype=torch.long), torch.tensor(output_token, dtype=torch.long)]\n",
+    "    contexts.append(context_tokens)\n",
+    "    targets.append(target_token)\n",
+    "\n",
+    "contexts= torch.tensor(contexts).T\n",
+    "targets= torch.tensor(targets)\n",
+    "print(contexts.shape, targets.shape)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,40 +145,36 @@
     "\n",
     "cbow_model = CBOW(embedding_size, vocab_size)  # Assuming CBOWModel is defined as before\n",
     "cbow_loss_function = nn.NLLLoss()\n",
-    "cbow_optimizer = torch.optim.SGD(cbow_model.parameters(), lr=0.01)"
+    "cbow_optimizer = torch.optim.Adam(cbow_model.parameters(), lr=0.01)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1 finished with total loss: 307478.3096\n",
-      "Epoch 2 finished with total loss: 295777.8947\n",
-      "Epoch 3 finished with total loss: 285184.1053\n",
-      "Epoch 4 finished with total loss: 275484.5555\n",
-      "Epoch 5 finished with total loss: 266522.2783\n",
-      "Loss:  266522.2782687312\n"
+      "Epoch 1 finished with total loss: 10.9805\n",
+      "Epoch 2 finished with total loss: 10.9805\n",
+      "Epoch 3 finished with total loss: 10.9805\n",
+      "Epoch 4 finished with total loss: 10.9805\n",
+      "Epoch 5 finished with total loss: 10.9805\n"
      ]
     }
    ],
    "source": [
-    "cbow_dataloader = DataLoader(pairs, batch_size=32, shuffle=True)\n",
     "epochs=5\n",
     "for epoch in range(epochs):\n",
     "    total_loss = 0\n",
-    "    with tqdm(cbow_dataloader, unit=\"batch\") as tepoch:\n",
-    "        for context, target in pairs:\n",
-    "            cbow_model.zero_grad()\n",
-    "            log_probs = cbow_model(context)\n",
-    "            loss = cbow_loss_function(log_probs, target)\n",
-    "            loss.backward()\n",
-    "            cbow_optimizer.step()\n",
-    "            total_loss += loss.item()\n",
+    "    cbow_model.zero_grad()\n",
+    "    log_probs = cbow_model(contexts)\n",
+    "    loss = cbow_loss_function(log_probs, targets)\n",
+    "    loss.backward()\n",
+    "    cbow_optimizer.step()\n",
+    "    total_loss += loss.item()\n",
     "        \n",
     "    print(f\"Epoch {epoch+1} finished with total loss: {total_loss:.4f}\")\n",
     "    torch.save(cbow_model.state_dict(), os.path.join(\"cbow_weights\", f\"cbow_epoch_{epoch+1}.pth\"))     "
@@ -173,14 +182,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['king', '▁forms', '▁Mei', 'wh', 'was', 'ential']\n"
+      "['king', 'nder', 'ties', '▁Sel', 'entral', 'eta']\n"
      ]
     }
    ],
